# Memscribe

./: ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  deny.toml  memscribe.example.toml  rust-toolchain.toml
.github/workflows/: ci.yml
crates/memscribe-adapters/: Cargo.toml
crates/memscribe-adapters/src/: claude_code.rs  codex.rs  copilot.rs  cursor.rs  gemini.rs  hermes.rs  lib.rs  opencode.rs  otel.rs  registry.rs  util.rs  vscode.rs  windsurf.rs  zed.rs
crates/memscribe-cli/: Cargo.toml  README.md
crates/memscribe-cli/src/: config.rs  main.rs
crates/memscribe-cli/tests/: cli.rs  cli_config.rs  watch.rs
crates/memscribe-core/: Cargo.toml
crates/memscribe-core/src/: adapter.rs  binder.rs  error.rs  gate.rs  gitcommit.rs  intent.rs  languageness.rs  lib.rs  model.rs  node.rs  nodeprep.rs  pipeline.rs  polarity.rs  prose.rs  redact.rs  segmenter.rs  sink.rs  speechact.rs
crates/memscribe-core/tests/: filter_properties.rs  pipeline_properties.rs
crates/memscribe-io/: Cargo.toml
crates/memscribe-io/src/: cursor_store.rs  discover.rs  hook.rs  lib.rs  otlp.rs  records.rs  tailer.rs
crates/memscribe-sink/: Cargo.toml  MEMDB.md
crates/memscribe-sink/src/: lib.rs  memdb.rs  ndjson.rs  sqlite.rs
crates/memscribe-testkit/: Cargo.toml
crates/memscribe-testkit/src/: golden.rs  invariants.rs  lib.rs  scenarios.rs
crates/memscribe-testkit/tests/: conformance.rs  golden.rs  properties.proptest-regressions  properties.rs  redaction.rs  robustness.rs
crates/memscribe-testkit/tests/snapshots/: events__claude_code__2_0__ban.snap  events__claude_code__2_0__happy_path_decision_then_edits.snap  events__claude_code__2_0__interleaved_arcs.snap  events__claude_code__2_0__multi_edit_single_commit.snap  events__claude_code__2_0__no_commitment_marker.snap  events__claude_code__2_0__rejected_alternative.snap  events__claude_code__2_0__rewind_compaction.snap  events__claude_code__2_0__subagent_thread.snap  events__claude_code__2_0__tool_failure.snap  events__claude_code__2_1__version_tolerance.snap  events__codex__real__custom_patch_apply.snap  events__codex__v1__version_tolerance.snap  events__codex__v2__ban.snap  events__codex__v2__happy_path_decision_then_edits.snap  events__codex__v2__interleaved_arcs.snap  events__codex__v2__multi_edit_single_commit.snap  events__codex__v2__no_commitment_marker.snap  events__codex__v2__rejected_alternative.snap  events__codex__v2__rewind_compaction.snap  events__codex__v2__subagent_thread.snap  events__codex__v2__tool_failure.snap  events__copilot__v1__ban.snap  events__copilot__v1__happy_path_decision_then_edits.snap  events__copilot__v1__interleaved_arcs.snap  events__copilot__v1__multi_edit_single_commit.snap  events__copilot__v1__no_commitment_marker.snap  events__copilot__v1__rejected_alternative.snap  events__copilot__v1__rewind_compaction.snap  events__copilot__v1__subagent_thread.snap  events__copilot__v1__tool_failure.snap  events__cursor__real__content_block_export.snap  events__cursor__v1__ban.snap  events__cursor__v1__happy_path_decision_then_edits.snap  events__cursor__v1__interleaved_arcs.snap  events__cursor__v1__multi_edit_single_commit.snap  events__cursor__v1__no_commitment_marker.snap  events__cursor__v1__rejected_alternative.snap  events__cursor__v1__rewind_compaction.snap  events__cursor__v1__subagent_thread.snap  events__cursor__v1__tool_failure.snap  (+131 more)
fixtures/claude_code/2.0/: ban.jsonl  happy_path_decision_then_edits.jsonl  interleaved_arcs.jsonl  multi_edit_single_commit.jsonl  no_commitment_marker.jsonl  rejected_alternative.jsonl  rewind_compaction.jsonl  subagent_thread.jsonl  tool_failure.jsonl
fixtures/claude_code/2.1/: version_tolerance.jsonl
fixtures/codex/real/: custom_patch_apply.jsonl
fixtures/codex/v1/: version_tolerance.jsonl
fixtures/codex/v2/: ban.jsonl  happy_path_decision_then_edits.jsonl  interleaved_arcs.jsonl  multi_edit_single_commit.jsonl  no_commitment_marker.jsonl  rejected_alternative.jsonl  rewind_compaction.jsonl  subagent_thread.jsonl  tool_failure.jsonl
fixtures/copilot/v1/: ban.jsonl  happy_path_decision_then_edits.jsonl  interleaved_arcs.jsonl  multi_edit_single_commit.jsonl  no_commitment_marker.jsonl  rejected_alternative.jsonl  rewind_compaction.jsonl  subagent_thread.jsonl  tool_failure.jsonl
fixtures/cursor/real/: content_block_export.jsonl
fixtures/cursor/v1/: ban.jsonl  happy_path_decision_then_edits.jsonl  interleaved_arcs.jsonl  multi_edit_single_commit.jsonl  no_commitment_marker.jsonl  rejected_alternative.jsonl  rewind_compaction.jsonl  subagent_thread.jsonl  tool_failure.jsonl
fixtures/gemini/legacy_json/: version_tolerance.jsonl
fixtures/gemini/v1/: ban.jsonl  happy_path_decision_then_edits.jsonl  interleaved_arcs.jsonl  multi_edit_single_commit.jsonl  no_commitment_marker.jsonl  rejected_alternative.jsonl  rewind_compaction.jsonl  subagent_thread.jsonl  tool_failure.jsonl
fixtures/otel/genai/: ban.jsonl  happy_path_decision_then_edits.jsonl  interleaved_arcs.jsonl  multi_edit_single_commit.jsonl  no_commitment_marker.jsonl  rejected_alternative.jsonl  rewind_compaction.jsonl  subagent_thread.jsonl  tool_failure.jsonl
fixtures/vscode/real/: interactive_sessions.json
fixtures/vscode/v1/: ban.jsonl  happy_path_decision_then_edits.jsonl  interleaved_arcs.jsonl  multi_edit_single_commit.jsonl  native_chatsession.jsonl  no_commitment_marker.jsonl  rejected_alternative.jsonl  rewind_compaction.jsonl  subagent_thread.jsonl  tool_failure.jsonl
fixtures/windsurf/v1/: ban.jsonl  happy_path_decision_then_edits.jsonl  interleaved_arcs.jsonl  multi_edit_single_commit.jsonl  no_commitment_marker.jsonl  rejected_alternative.jsonl  rewind_compaction.jsonl  subagent_thread.jsonl  tool_failure.jsonl
fixtures/zed/v1/: ban.jsonl  happy_path_decision_then_edits.jsonl  interleaved_arcs.jsonl  multi_edit_single_commit.jsonl  no_commitment_marker.jsonl  tool_failure.jsonl  (+3 more)
fuzz/: .gitignore  Cargo.toml  README.md
fuzz/fuzz_targets/: claude_code.rs  codex.rs  copilot.rs  cursor.rs  gemini.rs  otel.rs  vscode.rs  windsurf.rs  zed.rs
