[package]
name = "memscribe-adapters"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Per-tool transcript adapters for Memscribe (Claude Code, Codex, Gemini, OTel, Cursor, Windsurf, Zed, VS Code, Copilot)."

[lints]
workspace = true

[features]
default = [
    "claude_code",
    "codex",
    "gemini",
    "otel",
    "cursor",
    "windsurf",
    "zed",
    "vscode",
    "copilot",
    "hermes",
    "opencode",
]
claude_code = []
codex = ["dep:zstd"]
gemini = []
otel = []
# Cursor, Zed, and VS Code read their conversation from a SQLite store.
cursor = ["dep:rusqlite"]
windsurf = []
# Zed stores native-agent threads as zstd-compressed JSON in a SQLite blob.
zed = ["dep:rusqlite", "dep:zstd"]
vscode = ["dep:rusqlite"]
copilot = []
# Hermes and OpenCode read their conversation from a SQLite store.
hermes = ["dep:rusqlite"]
opencode = ["dep:rusqlite"]

[dependencies]
memscribe-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
time = { workspace = true }
regex = { workspace = true }
blake3 = { workspace = true }
walkdir = { workspace = true }
zstd = { workspace = true, optional = true }
rusqlite = { workspace = true, optional = true }

[dev-dependencies]
proptest = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
