[package]
name = "memscribe-sink"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Sink implementations for Memscribe: NDJSON (default), SQLite, and a feature-gated MemDB sink."

[lints]
workspace = true

[features]
default = ["sqlite"]
sqlite = ["dep:rusqlite"]
# Enable the MemDB sink. Memtrace turns this on; it is off by default so the
# crate is fully usable without MemDB present.
memdb = []

[dependencies]
memscribe-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
time = { workspace = true }
rusqlite = { workspace = true, optional = true }

[dev-dependencies]
memscribe-core = { workspace = true }
tempfile = { workspace = true }
serde_json = { workspace = true }
